# ChangeLog for dev-ruby/ruby-sdl
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-sdl/ChangeLog,v 1.31 2010/08/22 16:10:58 phajdan.jr Exp $

  22 Aug 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  ruby-sdl-2.1.1.1.ebuild:
  x86 stable wrt bug #333879

  21 Aug 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -files/ruby-sdl-1.1.0-sdl-mixer.patch:
  Remove unused file.

*ruby-sdl-2.1.1.1 (11 Jul 2010)

  11 Jul 2010; Hans de Graaff <graaff@gentoo.org> +ruby-sdl-2.1.1.1.ebuild:
  Version bump. Convert to ruby-ng.

  11 Jul 2010; Hans de Graaff <graaff@gentoo.org> -ruby-sdl-1.2.0.ebuild:
  Remove old version.

  03 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  ruby-sdl-2.0.1b.ebuild:
  x86 stable wrt bug #302953

  24 Dec 2009; Hans de Graaff <graaff@gentoo.org> ruby-sdl-1.2.0.ebuild,
  ruby-sdl-2.0.1b.ebuild:
  Remove obsolete virtual/ruby dependency.

  13 Jun 2009; Hans de Graaff <graaff@gentoo.org> -ruby-sdl-1.3.1.ebuild:
  Remove old version.

*ruby-sdl-2.0.1b (30 Nov 2008)

  30 Nov 2008; Hans de Graaff <graaff@gentoo.org> +ruby-sdl-2.0.1b.ebuild:
  Version bump. Closes #232893.

  30 Nov 2008; Hans de Graaff <graaff@gentoo.org> -ruby-sdl-1.3.0.ebuild:
  Remove old version

  06 Oct 2008; Diego Pettenò <flameeyes@gentoo.org> ruby-sdl-1.3.1.ebuild:
  Fix build-time dependencies.

  06 Aug 2008; Hans de Graaff <graaff@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

*ruby-sdl-1.3.1 (18 Oct 2007)

  18 Oct 2007; Hans de Graaff <graaff@gentoo.org> +ruby-sdl-1.3.1.ebuild:
  Version bump from bug 196132, fix quoting and use of emake

  15 May 2007; Matti Bickel <mabi@gentoo.org> ruby-sdl-1.3.0.ebuild:
  rekeyworded ~ppc (bug #168745)

  28 Mar 2007; Raúl Porcel <armin76@gentoo.org> ruby-sdl-1.3.0.ebuild:
  Add ~ia64 wrt bug 168745

*ruby-sdl-1.3.0 (28 Feb 2007)

  28 Feb 2007; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>